10.0:
	support "codec#key&key=value" style argument
	replace from/3f and from/sub with from/any
	replace to/3f with to/any

9.1:
	bash completion script (buggy)
	extend from/ESCAPE to support \uUUUU \xXX \OOO
	add bsdconv -l
	chown/chmod for created file
	use system-provided PATH_MAX (thanks to PkmX)
	sync data from project chvar
	add EBCDIC codecs: 37, 930, 933, 935, 937, 939 (as roytam1's request)
	add new state status: SUBMATCH_SUBROUTINE
	fix line separator issue on windows (thanks to roytam1)
	improve bsdconv_mktable, significantly reduce some output file size
	add testsuite

9.0:
	fix for MinGW
	export bsdconv_malloc/bsdconv_free
	add {from,to}/CCCII (as Thomas-Tsai's request)
	add inter/ZH-STRINGS
	internal API changes for use of bsdconv_ctl in wrappers
	bugfixes

8.0:
	add flush function into callback interface
		for supporting inter/OPENCC* ( http://github.com/buganini/bsdconv-opencc )
	sync data from project chvar
	update inter/KANA_PHONETIC
	use double data type for score value
	add inter/TRIM-WIDTH

7.5:
	add {from,to}/CP1253
	fix several linux issues
	bugfixes

7.4:
	adaptive verbosity

7.3:
	bsdconv: add -q for quiet mode
	sync tables from project chvar
	bugfixes

7.2:
	add {from,to}/_JIS0212 and it's alias
	update inter/ZHTW, inter/ZHCN, to/CP950_TRANS, to/CP936_TRANS
	add inter/ZH_FUZZY_TW, INTER/ZH_FUZZY_CN
	various bugfixes

7.1:
	add {from,to}/LOCALE alias to system locale
	rename inter/JP_PINYIN to inter/KANA_PHONETIC
	add transposed to/_CP12151, to/_CP1252, to/_CP874, to/_CP949, to/_SHIFT-JIS
	add {from,to}/GB18030
	add inter/NOBOM

7.0:
	add inter/SPLIT
	add from/_CP874
	alter bsdconv_codecs_list()

6.4:
	bugfixes

6.3:
	improve alias mechanism
	add bsdconv_codec_check()
	add bsdconv_codecs_list()
	add bsdconv_pack()

6.2:
	improve inter/{zh_decomp,zh_comp}

6.1:
	mac os compatible (thanks to godfat)
	improve inter/ZHTW_WORDS
	improve inter/ZH_DECOMP and inter/ZH_COMP

6.0:
	improve cross-codecs communication
	inter/WHITESPACE-DERAIL