@@ -79,8 +79,6 @@ TODO_CODECS_BASIC_TABLE+=inter/ZH_FUZZY_CN
 TODO_CODECS_BASIC_TABLE+=to/00
 TODO_CODECS_BASIC_TABLE+=to/ANSI-CONTROL
 TODO_CODECS_BASIC_TABLE+=to/ANY
-TODO_CODECS_BASIC_TABLE+=to/ASCII-ESCAPED-UNICODE
-TODO_CODECS_BASIC_TABLE+=to/ASCII-HEX-NUMERIC-HTML-ENTITY
 TODO_CODECS_BASIC_TABLE+=to/ASCII-HTML-CNS11643-IMG
 TODO_CODECS_BASIC_TABLE+=to/ASCII-HTML-INFO
 TODO_CODECS_BASIC_TABLE+=to/ASCII-HTML-UNICODE-IMG
@@ -151,8 +149,6 @@ TODO_CODECS_BASIC_CALLBACK+=inter/WIDTH
 TODO_CODECS_BASIC_CALLBACK+=inter/ZH-STRINGS
 TODO_CODECS_BASIC_CALLBACK+=to/ANSI-CONTROL
 TODO_CODECS_BASIC_CALLBACK+=to/ANY
-TODO_CODECS_BASIC_CALLBACK+=to/ASCII-ESCAPED-UNICODE
-TODO_CODECS_BASIC_CALLBACK+=to/ASCII-HEX-NUMERIC-HTML-ENTITY
 TODO_CODECS_BASIC_CALLBACK+=to/ASCII-HTML-CNS11643-IMG
 TODO_CODECS_BASIC_CALLBACK+=to/ASCII-HTML-INFO
 TODO_CODECS_BASIC_CALLBACK+=to/ASCII-HTML-UNICODE-IMG
