@@ -29,4 +29,7 @@ UAO241	_UAO241,ASCII
 UAO250	_UAO250,ASCII
 UTF-8	_UTF-8,ASCII
 3F		ANY#3F
-URL		ESCAPE#MODE=UNICODE&PREFIX=2575,ESCAPE#MODE=16&PREFIX=25
+URL		ESCAPE#FILTER=UNICODE&MODE=16&PREFIX=2575,ESCAPE#FILTER=BYTE&MODE=16&PREFIX=25
+ASCII-ESCAPED-UNICODE	ESCAPE#FILTER=UNICODE&MODE=16&PREFIX=5C75
+ASCII-HEX-NUMERIC-HTML-ENTITY	ESCAPE#FILTER=UNICODE&PREFIX=262378&MODE=16&SUFFIX=3B
+ASCII-DEC-NUMERIC-HTML-ENTITY	ESCAPE#FILTER=UNICODE&PREFIX=2623&MODE=10&SUFFIX=3B
