@@ -2,6 +2,9 @@
 	support "codec#key&key=value" style argument
 	replace from/3f and from/sub with from/any
 	replace to/3f with to/any
+	replace to/ASCII-ESCAPE-UNICODE with alias to ESCAPE#...
+	replace to/ASCII-HEX-HTML-ENTITY with alias to ESCAPE#...
+	add to/ASCII-DEC-HTML-ENTITY alias to ESCAPE#...
 
 9.1:
 	bash completion script (buggy)
